--- a/TicTacToe- static page/ttt.html
+++ b/TicTacToe- static page/ttt.html
@@ -12,17 +12,17 @@
           <tbody>
             <tr>
               <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
+              <td class="vertical"></td>
               <td></td>
             </tr>
             <tr>
+              <td class="horizontal"></td>
+              <td class="vertical horizontal"></td>
+              <td class="horizontal"></td>
+            </tr>
+            <tr>
               <td></td>
-              <td></td>
+              <td class="vertical"></td>
               <td></td>
             </tr>
           </tbody>
