--- a/BlogExercise/blog.html
+++ b/BlogExercise/blog.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" href="blogstyle.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <meta charset="utf-8">
     <title>Blog</title>
   </head>
   <body>
-    
+
       <div class="main-article">
 
         <div class="main-text">
