Editing Navbar and grid of image gallery

--- a/BootstrapImageGallery/gallery.html
+++ b/BootstrapImageGallery/gallery.html
@@ -2,16 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Image Gallery</title>
   </head>
   <body>
 
+    <!-- navbar -->
+    <nav class="navbar navbar-dark bg-dark" style="background-color: #2c3e50;">
+      <ul class="nav nav-pills">
+        <li role="presentation" style="color: #ecf0f1;"><a href="#">IMGS</a></li>
+        <li role="presentation" style="color: #ecf0f1;"><a href="#">Profile</a></li>
+        <li role="presentation" style="color: #ecf0f1;"><a href="#">Messages</a></li>
+      </ul>
+    </nav>
+
+
+    <div class="container">
+
+      <!-- jumbotron -->
+      <div class="jumbotron">
+        <h1>The Image Gallery</h1>
+        <p>A few really cool pictures that help you appreciate life</p>
+      </div>
+
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
