--- a/BootStrap/StartupPage/index.html
+++ b/BootStrap/StartupPage/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="startup.css">
-  <title></title>
+  <title>Purrfect Match</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Purrfect Match</a>
+        <a href="#" class="navbar-brand">Purrfect Match</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-nav-demo">
         <ul class="nav navbar-nav">
@@ -36,6 +36,10 @@
       </div>
     </div>
   </nav>
+
+  <!-- <div class="jumbotron">
+    <img class="cute-cat" src="cat.jpg" alt="cute cat that is giving human a high-five">
+  </div> -->
 
 </body>
 
