Finished exercise with startup page

--- a/BootStrap/StartupPage/index.html
+++ b/BootStrap/StartupPage/index.html
@@ -7,10 +7,24 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="startup.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <title>Purrfect Match</title>
 </head>
 
 <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg col-sm">
+        <div id="content" class="jumbotron">
+          <h1>Purrfect Match</h1>
+          <h3>The Only Human-Feline Dating App</h3>
+          <hr>
+          <button type="button" class="btn btn-light" name="button"><i class="fas fa-paw"></i> Get Started!</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -21,11 +35,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand">Purrfect Match</a>
+        <a href="#" class="navbar-brand navbar-css">Purrfect Match</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-nav-demo">
-        <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
+        <ul class="nav navbar-nav navbar-css">
+          <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -37,9 +51,8 @@
     </div>
   </nav>
 
-  <!-- <div class="jumbotron">
-    <img class="cute-cat" src="cat.jpg" alt="cute cat that is giving human a high-five">
-  </div> -->
+
+
 
 </body>
 
