Finished Pattern Project
My code is in index.html & style.css.

--- a/BootStrap/BootStrap4/PatternProject/index.html
+++ b/BootStrap/BootStrap4/PatternProject/index.html
@@ -19,6 +19,52 @@
       <a class="navbar-brand" href="#"><i id="binoculars" class="fas fa-binoculars mr-2"></i> Pattern</a>
     </div>
   </nav>
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h1>Pattern</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+      <button type="button" class="btn btn-primary" name="button">Do Something</button>
+      <button type="button" class="btn btn-success" name="button">Another Thing</button>
+    </div>
+  </section>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card" style="width: 22rem;">
+          <img src="imgs/pattern1.jpeg" class="card-img-top" alt="cool pic of a building">
+          <div class="card-body">
+            <h5 class="card-title">First Thing</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam! Veniam, dolorum facere? Commodi, ut. Et, itaque quam!</p>
+            <button type="button" class="btn btn-outline-success" name="button">Download</button>
+            <button type="button" class="btn btn-outline-danger" name="button"><i class="far fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card" style="width: 22rem;">
+          <img src="imgs/pattern2.jpeg" class="card-img-top" alt="cool pic of a building">
+          <div class="card-body">
+            <h5 class="card-title">First Thing</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam! Veniam, dolorum facere? Commodi, ut. Et, itaque quam!</p>
+            <button type="button" class="btn btn-outline-success" name="button">Download</button>
+            <button type="button" class="btn btn-outline-danger" name="button"><i class="far fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card" style="width: 22rem;">
+          <img src="imgs/pattern3.jpeg" class="card-img-top" alt="cool pic of a building">
+          <div class="card-body">
+            <h5 class="card-title">First Thing</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam! Veniam, dolorum facere? Commodi, ut. Et, itaque quam!</p>
+            <button type="button" class="btn btn-outline-success" name="button">Download</button>
+            <button type="button" class="btn btn-outline-danger" name="button"><i class="far fa-heart"></i></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
