--- a/Javascript/Loops/WhileLoops/Annoy-omaticV2/annoyv2.html
+++ b/Javascript/Loops/WhileLoops/Annoy-omaticV2/annoyv2.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="annoy.js"></script>
+    <script src="annoyv2.js"></script>
     <title>Annoy-Omatic</title>
 </head>
 
 <body>
 
-    <h1>Annoy-Omatic</h1>
+    <h1>Annoy-Omatic V2</h1>
 
 
 
