--- a/FrontEndMentorChallenge1/index.html
+++ b/FrontEndMentorChallenge1/index.html
@@ -13,6 +13,17 @@
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
   <title>Frontend Mentor | Beta sign up split layout Challenge</title>
 
@@ -20,7 +31,7 @@
 
 <body>
 
-  <div>
+  <div class="">
     <svg width="120" height="35" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
         <path id="a" d="M.01.021h67.924V34.93H.01z" />
@@ -41,14 +52,14 @@
     </svg>
   </div>
 
-  <span>
+  <div>
 
-  </span>
+  </div>
 
   <div>
     <h1>All your files in one secure location, accessible anywhere.</h1>
 
-    <p>
+    <p class="par1">
       Fylo stores all your most important files in one secure location.
       Access them wherever you need, share and collaborate with friends,
       family and co-workers.
@@ -56,7 +67,7 @@
 
     <div>Sign up for early access</div>
 
-    <button>Sign Up</button>
+    <span><input type="text" name="Email" placeholder="Email"></span><button class="button">Sign Up</button>
 
     <footer>
       <p>Privacy Policy</p>
