--- a/Javascript/Arrays/index.html
+++ b/Javascript/Arrays/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="arrays.js"></script>
-    <title>Arrays</title>
+    <script type="text/javascript" src="arrays.js"></script>
+    <title>Todo List</title>
 </head>
 
 <body>
-
+    <div>
+        <h1>ToDo List</h1>
+            <ul>
+                <li>"new" - Add a Todo</li>
+                <li>"list" - View all Todos</li>
+                <li>"quit" - Quit App</li>
+            </ul>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
