--- a/Javascript/Arrays/index.html
+++ b/Javascript/Arrays/index.html
@@ -15,13 +15,14 @@
 <body>
     <div>
         <h1>ToDo List</h1>
-            <ul>
-                <li>"new" - Add a Todo</li>
-                <li>"list" - View all Todos</li>
-                <li>"quit" - Quit App</li>
-            </ul>
+        <ul>
+            <li>"new" - Add a Todo</li>
+            <li>"list" - View all Todos</li>
+            <li>"delete" - Delete a Todo</li>
+            <li>"quit" - Quit App</li>
+        </ul>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
