Problem sets utilizing arrays

--- a/Javascript/Arrays/ArrayPSets/index.html
+++ b/Javascript/Arrays/ArrayPSets/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <button onclick="printReverse([1,2,3,4])">Button</button>
+    <button style="color: blue;" onclick="location.reload()">Refresh</button>
 
 </body>
 
