--- a/Projects/TodoApp/index.html
+++ b/Projects/TodoApp/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -8,28 +9,71 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
     <title>Todo App</title>
 </head>
 
 <body>
 
-
-    <div class="container">
-        <div class="jumbotron">
-            <h1 id="header" class="text-center">Todo List App</h1>
-            <div style="justify-content: center;">
-                <input id="inputText" class="border border-dark rounded-sm" type="text">
-                <button class="plus" type="submit" onclick="getTodo();"><i class="fa fa-plus"></i></button>
-                <ul>
-                    <li id="listItem"></li>
-                </ul>
+    <div class="page-content page-container" id="page-content">
+        <div class="padding">
+            <div class="row container d-flex justify-content-center">
+                <div class="col-lg-12">
+                    <div class="card px-3">
+                        <div class="card-body">
+                            <div class="add-items d-flex"> <input type="text" class="form-control todo-list-input"
+                                    placeholder="What do you need to do today?"> <button
+                                    class="add btn btn-primary font-weight-bold todo-list-add-btn">Add</button> </div>
+                            <div class="list-wrapper">
+                                <ul class="d-flex flex-column-reverse todo-list">
+                                    <li>
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox"> For what reason would it be
+                                                advisable. <i class="input-helper"></i></label> </div> <i
+                                            class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                    <li class="completed">
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox" checked=""> For what reason would
+                                                it be advisable for me
+                                                to think. <i class="input-helper"></i></label> </div> <i
+                                            class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                    <li>
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox"> it be advisable for me to think
+                                                about business content?
+                                                <i class="input-helper"></i></label> </div> <i
+                                            class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                    <li>
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox"> Print Statements all <i
+                                                    class="input-helper"></i></label> </div> <i
+                                            class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                    <li class="completed">
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox" checked=""> Call Rampbo <i
+                                                    class="input-helper"></i></label> </div> <i
+                                            class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                    <li>
+                                        <div class="form-check"> <label class="form-check-label"> <input
+                                                    class="checkbox" type="checkbox"> Print bills <i
+                                                    class="input-helper"></i></label> </div>
+                                        <i class="remove mdi mdi-close-circle-outline"></i>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 
-
+    <script src="index.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
