--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="colorGame.css">
     <title>Document</title>
 </head>
@@ -11,24 +13,49 @@
 <body>
 
     <div class="top-header">
-        <div class="header-container">
+        <div class="header-container container">
             <div class="header">
                 <h1>The Great</h1>
-                <h1>(RBG COLOR HERE)</h1>
+                <h1 class="rgbHeader"></h1>
                 <h1>Guessing Game</h1>
             </div>
         </div>
 
         <div class="header-container">
             <div class="header option">
-                <span>NEW COLORS</span>
+                <span class="newColors">NEW COLORS</span>
                 <span id="winner"></span>
                 <span>EASY</span><span>HARD</span>
             </div>
         </div>
     </div>
 
+
+    <div class="mt-3 container">
+        <div id="firstRow" class="d-flex justify-content-center bd-highlight mb-3">
+            <div class="p-5 bd-highlight box-choice"></div>
+            <div class="p-5 ml-3 mr-3 p bd-highlight box-choice"></div>
+            <div class="p-5 bd-highlight box-choice"></div>
+        </div>
+        <div id="secondRow" class="d-flex justify-content-center bd-highlight mb-3">
+            <div class="p-5 bd-highlight box-choice"></div>
+            <div class="p-5 ml-3 mr-3 bd-highlight box-choice"></div>
+            <div class="p-5 bd-highlight box-choice"></div>
+        </div>
+    </div>
+
+
+
     <script src="colorGame.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
