Adding more logic to color game
Working on randomizing colors for the squares the user can click

--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -21,17 +21,17 @@
             </div>
         </div>
 
-        <div class="header-container">
-            <div class="header option">
+        <div class="header-container" style="background-color: white;">
+            <div class="header option container d-flex justify-content-between">
                 <span class="newColors">NEW COLORS</span>
                 <span id="winner"></span>
-                <span>EASY</span><span>HARD</span>
+                <span class="easy">EASY</span><span class="hard">HARD</span>
             </div>
         </div>
     </div>
 
 
-    <div class="mt-3 container">
+    <div class="mt-3">
         <div id="firstRow" class="d-flex justify-content-center bd-highlight mb-3">
             <div class="p-5 bd-highlight box-choice"></div>
             <div class="p-5 ml-3 mr-3 p bd-highlight box-choice"></div>
