--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -15,7 +15,7 @@
     <div class="top-header">
         <div class="header-container container">
             <div class="header">
-                <h1>The Great</h1>
+                <h1>The Great RGB</h1>
                 <h1 class="rgbHeader"></h1>
                 <h1>Guessing Game</h1>
             </div>
