More logic and refactoring

--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="ColorGame.css">
-    <title>Document</title>
+    <title>Color Game</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="header-container" style="background-color: white;">
-            <div class="header option container d-flex justify-content-between">
+            <div class=" option container d-flex justify-content-between">
                 <span class="newColors">NEW COLORS</span>
                 <span id="winner"></span>
                 <span class="easy">EASY</span><span class="hard">HARD</span>
