--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -21,8 +21,12 @@
             </div>
         </div>
 
+        <!-- Button trigger modal -->
+        <button type="button" class="mb-3 btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">
+            How to Play?
+        </button>
         <div class="header-container" style="background-color: white;">
-            <div class=" option container d-flex justify-content-between">
+            <div class="option container d-flex justify-content-between">
                 <span class="newColors">NEW COLORS</span>
                 <span id="winner"></span>
                 <span class="easy">EASY</span><span class="hard">HARD</span>
@@ -41,6 +45,37 @@
             <div class="p-5 bd-highlight box-choice"></div>
             <div class="p-5 ml-3 mr-3 bd-highlight box-choice"></div>
             <div class="p-5 bd-highlight box-choice"></div>
+        </div>
+    </div>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Color Game Instructions</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    DIRECTIONS: Based on the RGB value above (three numbers), select the color you think is being
+                    represented. <br /> <br> R = Red; G = Green; B = Blue; <br /> <br> Each number has a max of 255. The
+                    higher the
+                    number
+                    the more the color is in the tile. <br /> <br> For example, rgb(20, 15, 255) would be a shade of
+                    dark blue.
+                    <!-- When you guess the answer you get 5 points and lose 1 point for each of the missed answers. This is one
+                    of the best games for the brain of web developers and designers, helping you to learn and understand
+                    the RGB color model. -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
