--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -1,96 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="ColorGame.css">
-    <title>Color Game</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="ColorGame.css">
+        <title>Color Game</title>
+    </head>
 
-<body>
+    <body>
 
-    <div class="top-header">
-        <div class="header-container container">
-            <div class="header">
-                <h1>The Great RGB</h1>
-                <h1 class="rgbHeader"></h1>
-                <h1>Guessing Game</h1>
-            </div>
-        </div>
-
-        <!-- Button trigger modal -->
-        <button type="button" class="mb-3 btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">
-            How to Play?
-        </button>
-        <div class="header-container" style="background-color: white;">
-            <div class="option container d-flex justify-content-between">
-                <span class="newColors">NEW COLORS</span>
-                <span id="winner"></span>
-                <span class="easy">EASY</span><span class="hard">HARD</span>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="mt-3">
-        <div id="firstRow" class="d-flex justify-content-center bd-highlight mb-3">
-            <div class="p-5 bd-highlight box-choice"></div>
-            <div class="p-5 ml-3 mr-3 p bd-highlight box-choice"></div>
-            <div class="p-5 bd-highlight box-choice"></div>
-        </div>
-        <div id="secondRow" class="d-flex justify-content-center bd-highlight mb-3">
-            <div class="p-5 bd-highlight box-choice"></div>
-            <div class="p-5 ml-3 mr-3 bd-highlight box-choice"></div>
-            <div class="p-5 bd-highlight box-choice"></div>
-        </div>
-    </div>
-
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Color Game Instructions</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+        <div class="top-header">
+            <div class="header-container container">
+                <div class="header">
+                    <h1>The Great RGB</h1>
+                    <h1 class="rgbHeader"></h1>
+                    <h1>Guessing Game</h1>
                 </div>
-                <div class="modal-body">
-                    DIRECTIONS: Based on the RGB value above (three numbers), select the color you think is being
-                    represented. <br /> <br> R = Red; G = Green; B = Blue; <br /> <br> Each number has a max of 255. The
-                    higher the
-                    number
-                    the more the color is in the tile. <br /> <br> For example, rgb(20, 15, 255) would be a shade of
-                    dark blue.
-                    <!-- When you guess the answer you get 5 points and lose 1 point for each of the missed answers. This is one
+            </div>
+
+            <!-- Button trigger modal -->
+            <button type="button" class="mb-3 btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">
+                How to Play?
+            </button>
+            <div class="header-container" style="background-color: white;">
+                <div class="option container d-flex justify-content-between">
+                    <span class="newColors">NEW COLORS</span>
+                    <span id="winner"></span>
+                    <!-- <span class="easy">EASY</span><span class="hard">HARD</span> -->
+                </div>
+            </div>
+        </div>
+
+
+        <div class="mt-3">
+            <div id="firstRow" class="d-flex justify-content-center bd-highlight mb-3">
+                <div class="p-5 bd-highlight box-choice"></div>
+                <div class="p-5 ml-3 mr-3 p bd-highlight box-choice"></div>
+                <div class="p-5 bd-highlight box-choice"></div>
+            </div>
+            <div id="secondRow" class="d-flex justify-content-center bd-highlight mb-3">
+                <div class="p-5 bd-highlight box-choice"></div>
+                <div class="p-5 ml-3 mr-3 bd-highlight box-choice"></div>
+                <div class="p-5 bd-highlight box-choice"></div>
+            </div>
+        </div>
+
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Color Game Instructions</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        DIRECTIONS: Based on the RGB value above (three numbers), select the color you think is being
+                        represented. <br /> <br> R = Red; G = Green; B = Blue; <br /> <br> Each number has a max of 255. The
+                        higher the
+                        number
+                        the more the color is in the tile. <br /> <br> For example, rgb(20, 15, 255) would be a shade of
+                        dark blue.
+                        <!-- When you guess the answer you get 5 points and lose 1 point for each of the missed answers. This is one
                     of the best games for the brain of web developers and designers, helping you to learn and understand
                     the RGB color model. -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
-    <script src="ColorGame.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-</body>
+        <script src="ColorGame.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+    </body>
 
 </html>
