Refactoring of html/css

--- a/Projects/ColorGameApp/colorGame.html
+++ b/Projects/ColorGameApp/colorGame.html
@@ -35,17 +35,14 @@
     </div>
 
 
-    <div class="mt-4">
-        <div id="firstRow" class="d-flex justify-content-center bd-highlight mb-3">
-            <div class="bd-highlight box-choice"></div>
-            <div class="ml-3 mr-3 p bd-highlight box-choice"></div>
-            <div class="bd-highlight box-choice"></div>
-        </div>
-        <div id="secondRow" class="d-flex justify-content-center bd-highlight">
-            <div class="bd-highlight box-choice"></div>
-            <div class="ml-3 mr-3 bd-highlight box-choice"></div>
-            <div class="bd-highlight box-choice"></div>
-        </div>
+    <div class="centered">
+        <!-- d-flex justify-content-center bd-highlight mb-3 -->
+        <div class="box-choice square"></div>
+        <div class="box-choice square"></div>
+        <div class="box-choice square"></div>
+        <div class="box-choice square"></div>
+        <div class="box-choice square"></div>
+        <div class="box-choice square"></div>
     </div>
 
 
