Working on structure of HTML and CSS for todo app

--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="todo.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Todo App</title>
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="center">
+            <input type="text" name="" id=""><i class="fa fa-plus"></i>
+            <ul>
+                <li>hello</li>
+            </ul>
+        </div>
+    </div>
 
     <script src="todo.js"></script>
 </body>
