Working with flexbox to create a better skeleton for the todo list

--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -11,12 +11,12 @@
 
 <body>
 
-    <div class="container">
-        <div class="center">
-            <input type="text" name="" id=""><i class="fa fa-plus"></i>
-            <ul>
-                <li>hello</li>
-            </ul>
+    <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
+        </div>
+        <div class="flexbox-item flexbox-item-2">
+        </div>
+        <div class="flexbox-item flexbox-item-3">
         </div>
     </div>
 
