--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -13,10 +13,13 @@
 
     <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
-        </div>
-        <div class="flexbox-item flexbox-item-2">
-        </div>
-        <div class="flexbox-item flexbox-item-3">
+            <div class="header">
+                <span>TO-DO LIST</span><i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <input class="input" type="text" placeholder="Add New Todo">
+            <ul class="todos">
+                <li style="list-style-type: none;"></li>
+            </ul>
         </div>
     </div>
 
