--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -14,11 +14,10 @@
     <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
             <div class="header">
-                <span>TO-DO LIST</span><i class="fa fa-plus" aria-hidden="true"></i>
+                <span>TO-DO LIST</span><i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
             </div>
             <input class="input" type="text" placeholder="Add New Todo">
             <ul class="todos">
-                <li style="list-style-type: none;"></li>
             </ul>
         </div>
     </div>
