Working more on the logic behind adding items to todo list

--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -14,11 +14,11 @@
     <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
             <div class="header">
-                <span>TO-DO LIST</span><i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
+                <span>TO-DO LIST</span><a onclick="listItem()"><i id="plus-icon" class="fa fa-plus"
+                        aria-hidden="true"></i></a>
             </div>
-            <input class="input" type="text" placeholder="Add New Todo">
-            <ul class="todos">
-            </ul>
+            <input spellcheck="true" maxlength="40" id="input" type="text" placeholder="Add New Todo">
+            <ul class="todos"></ul>
         </div>
     </div>
 
