Refactoring duplicate code

--- a/Projects/TodoApp/todo.html
+++ b/Projects/TodoApp/todo.html
@@ -17,9 +17,12 @@
                 <span>TO-DO LIST</span><a><i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i></a>
             </div>
             <input spellcheck="true" maxlength="40" id="input" type="text" placeholder="Add New Todo">
-            <ul class="todos"></ul>
+            <ul id="todos"></ul>
         </div>
     </div>
+
+
+
 
     <script src="todo.js"></script>
 </body>
